--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -21,3 +21,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%; */
 }
+
+.leaflet-container {  width: 100%;  height: 300px;}
